<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yourorg.sample.MainActivity">

    <Button
        android:id="@+id/btnVersions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />

    <Button
        android:id="@+id/btnTest25519"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_ecc_25519"
        app:layout_constraintLeft_toRightOf="@+id/btnVersions"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnTest2048"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_rsa_2048"
        app:layout_constraintLeft_toRightOf="@+id/btnTest25519"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnTest4096"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/test_rsa_4096"
        app:layout_constraintLeft_toRightOf="@+id/btnTest2048"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnTest2048_1M"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/_1m"
        app:layout_constraintTop_toBottomOf="@+id/btnVersions"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp" />

    <Button
        android:id="@+id/btnTest2048_3M"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnVersions"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/_3m"
        app:layout_constraintLeft_toRightOf="@+id/btnTest2048_1M"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnTest2048_5M"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnVersions"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/_5m"
        app:layout_constraintLeft_toRightOf="@+id/btnTest2048_3M"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnTest2048_10M"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnVersions"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/_10m"
        app:layout_constraintLeft_toRightOf="@+id/btnTest2048_5M"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btnTest2048_25M"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnVersions"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/_25m"
        app:layout_constraintLeft_toRightOf="@+id/btnTest2048_10M"
        tools:layout_editor_absoluteY="8dp" />


    <Button
        android:id="@+id/btnTest2048_50M"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnVersions"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/_50m"
        app:layout_constraintLeft_toRightOf="@+id/btnTest2048_25M"
        tools:layout_editor_absoluteY="8dp" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="341dp"
        android:layout_height="239dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text=''
        android:textSize="12sp"
        android:textIsSelectable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEncrypt" />

    <EditText
        android:id="@+id/etData"
        android:layout_width="344dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        android:hint="@string/data_to_encrypt_or_decrypt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTest2048_1M" />

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/encrypt"
        app:layout_constraintStart_toStartOf="@+id/btnVersions"
        app:layout_constraintTop_toBottomOf="@+id/etData" />

    <Button
        android:id="@+id/btnDecryptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/decrypt_file"
        app:layout_constraintStart_toEndOf="@+id/btnEncrypt"
        app:layout_constraintTop_toBottomOf="@+id/etData" />

    <Button
        android:id="@+id/btnDecryptMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/decrypt_msg"
        app:layout_constraintStart_toEndOf="@+id/btnDecryptFile"
        app:layout_constraintTop_toBottomOf="@+id/etData" />

</android.support.constraint.ConstraintLayout>
